crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__charshape_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



가

기울임진하게

밑줄없음밑줄가운데줄윗줄

글자크기: 기준크기10pt 한글90% 영문80% 기타70%

폰트: 한글돋움 영문CourierNew 기타قLucidaSansUnicode

붉은밑줄

점선밑줄
