crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__facename2_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서

**버전**: 5.00.01.07

ko바탕 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕

*[컨트롤: secd]*

*[단 정의]*
ko한컴돋움 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕
ko바탕 enTimesNewRoman cn바탕 jp바탕 other바탕 symbol바탕 user바탕
ko바탕 enArial cn바탕 jp바탕 other바탕 symbol바탕 user바탕
ko바탕 en바탕 cn약자漢字 jp바탕 other바탕 symbol바탕 user바탕
ko바탕 en바탕 cn간자漢字 jp바탕 other바탕 symbol바탕 user바탕
ko바탕 en바탕 cn바탕 jp명조あ other바탕 symbol바탕 user바탕
ko바탕 en바탕 cn바탕 jp고딕あ other바탕 symbol바탕 user바탕
