crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__facename_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



ko바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko한컴바탕en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko한양신명조en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko휴먼명조en바탕cn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enArialcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enComicSansMScn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enCourierNewcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕enDejaVuSerifcn바탕jp바탕other바탕symbol바탕user바탕

ko바탕en바탕cnSimHeijp바탕other바탕symbol바탕user바탕

ko바탕en바탕cnSimSunjp바탕other바탕symbol바탕user바탕

ko바탕en바탕cn바탕jpMSGothicother바탕symbol바탕user바탕

ko바탕en바탕cn바탕jpMSMinChoother바탕symbol바탕user바탕
