crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__footnote_endnote_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



## 각주



각주입니다.

각주 두 번째입니다.



## 미주



미주입니다.

미주 두 번째입니다.
