crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__headerfooter_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



Header 이것은 머리말입니다.



첫 페이지



Footer 이것은 꼬리말입니다.
